src/Toolbar/Toolbar.scss
.autoql-vanilla-chat-message-bubble:hover
    .autoql-vanilla-chat-message-toolbar:not(.autoql-vanilla-chat-message-toolbar-hidden) {
    visibility: visible;
}

.autoql-vanilla-chat-message-toolbar {
    display: flex;
    visibility: hidden;
    position: absolute;
    top: -28px;
    padding: 5px;
    border-radius: 6px;
    line-height: 28px;
    z-index: 10;
    background: var(--autoql-vanilla-background-color-secondary);
    border: 1px solid var(--autoql-vanilla-border-color);

    &.autoql-vanilla-chat-message-toolbar-right {
        right: -9px;
    }

    &.autoql-vanilla-chat-message-toolbar-left {
        left: -9px;
    }

    &.autoql-vanilla-chat-message-toolbar-show {
        visibility: visible;
    }

    &.autoql-vanilla-chat-message-toolbar-hidden {
        visibility: hidden;
    }

    .autoql-vanilla-chata-toolbar-btn {
        height: 28px;
        width: 28px;
        background: none;
        border: none;
        font-size: 16px;
        line-height: 28px;
        vertical-align: top;
        color: var(--autoql-vanilla-text-color-primary);
        cursor: pointer;
        outline: none !important;
        position: relative;
        display: flex;
        align-items: center;
        justify-content: center;

        &:focus {
            background: none !important;
        }

        &:hover {
            opacity: 0.7;
            color: var(--autoql-vanilla-accent-color);
        }

        &.autoql-vanilla-viz-toolbar-btn-active {
            color: var(--autoql-vanilla-accent-color);
        }
    }
}

.autoql-vanilla-badge {
    position: absolute;
    background: var(--autoql-vanilla-warning-color);
    border: 1px solid var(--autoql-vanilla-background-color-primary);
    width: 10px;
    height: 10px;
    top: 0;
    right: 2px;
    border-radius: 50%;
    box-sizing: content-box;
}

